# CalPoly_AGV

./: .gitignore  .gitmodules  README.md
Microcontrollers/Arduino/CombinedControlCode/: CombinedControlCode.ino  README.md
Pi/: README.md
Pi/workspaces/: Dockerfile  start.sh
Pi/workspaces/ros2_humble_ws/src/camera_publishers/: package.xml  setup.cfg  setup.py
Pi/workspaces/ros2_humble_ws/src/camera_publishers/camera_publishers/: camera_publishers.py
Pi/workspaces/ros2_humble_ws/src/encoder_pkg/encoder_pkg/: .encoder_publisher.py.swo  encoder_publisher.py  readtest.py
Pi/workspaces/ros2_humble_ws/src/motor_control_pkg/: package.xml  setup.cfg  setup.py
Pi/workspaces/ros2_humble_ws/src/motor_control_pkg/motor_control_pkg/: motor_control_node.py
isaac_ros-dev/: camera_path_tester.py  camera_tester.py  single_camera_tester.py
isaac_ros-dev/configs/camera_configs/: cameras.json
isaac_ros-dev/configs/camera_configs/left_boxcam/: left_boxcam_camera_info.yaml  left_boxcam_params.yaml
isaac_ros-dev/configs/camera_configs/right_boxcam/: right_boxcam_camera_info.yaml  right_boxcam_params.yaml
isaac_ros-dev/configs/camera_configs/right_fisheye/: right_fisheye_camera_info.yaml  right_fisheye_params.yaml
isaac_ros-dev/launch/: bringup_launch.py
isaac_ros-dev/src/agv_bot_description/: CMakeLists.txt  package.xml
isaac_ros-dev/src/agv_bot_description/launch/: display.launch.py
isaac_ros-dev/src/agv_bot_description/meshes/: agv_chassis.stl
isaac_ros-dev/src/agv_bot_description/src/description/: agv_bot_description.urdf
isaac_ros-dev/src/encoder_pkg/: package.xml  setup.cfg  setup.py
isaac_ros-dev/src/encoder_pkg/encoder_pkg/: encoder_publisher.py  readtest.py
isaac_ros-dev/src/gps_package/: package.xml  setup.cfg  setup.py
isaac_ros-dev/src/gps_package/gps_package/: GPS_Extract.py  gps_node.py
isaac_ros-dev/src/image_stitcher/: package.xml  setup.cfg  setup.py
isaac_ros-dev/src/image_stitcher/image_stitcher/: image_stitcher_node.py
isaac_ros-dev/src/isaac_ros_common/docker/: Dockerfile.aarch64  Dockerfile.aarch64.ros2_humble  Dockerfile.cppagv  Dockerfile.ros2_humble  Dockerfile.x86_64
isaac_ros-dev/src/isaac_ros_common/isaac_ros_common/: CMakeLists.txt
isaac_ros-dev/src/isaac_ros_common/scripts/: .isaac_ros_common-config  run_dev.sh
isaac_ros-dev/src/lin_det_pkg/: package.xml  setup.cfg  setup.py
isaac_ros-dev/src/lin_det_pkg/lin_det_pkg/: lin_det_node.py
isaac_ros-dev/src/realsense-ros/realsense2_camera/launch/: rs_launch.py
isaac_ros-dev/src/realsense_obj_det/: package.xml  setup.cfg  setup.py
isaac_ros-dev/src/realsense_obj_det/realsense_obj_det/: realsense_obj_det_node.py
isaac_ros-dev/src/road_segmentation/: package.xml  setup.cfg  setup.py
isaac_ros-dev/src/road_segmentation/road_segmentation/: road_segmentation_node.py  unet.py
isaac_ros-dev/src/simulator_control/: package.xml  setup.cfg  setup.py
isaac_ros-dev/src/simulator_control/simulator_control/: simulator_control_node.py
isaac_ros-dev/src/teleop_twist_joy/launch/: teleop-launch.py
isaac_ros-dev/src/twist_mux/config/: twist_mux_topics.yaml
isaac_ros-dev/src/web_video_server/src/: web_video_server.cpp
isaac_ros-dev/utils/: get_video_devices.py  single_camera_tester.py  test_stream.py
