<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gps_package</name>
  <version>0.0.0</version>
  <description>Parse Serial GPS messages from on-board modem/gps module</description>
  <maintainer email="crweigel@cpp.edu">Cameron Weigel</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>pynmea2</exec_depend>
  <exec_depend>io</exec_depend>
  <exec_depend>time</exec_depend>



  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
