<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>image_stitcher</name>
  <version>0.0.1</version>
  <description>Stitches ROS2 Image messages and camera feeds for remote control</description>
  <maintainer email="crweigel@cpp.edu">Cameron Weigel</maintainer>
  <license>TODO: License declaration</license>

  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
