<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulator_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="admin@todo.todo">admin</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pyfirmata</exec_depend>
  <exec_depend>serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
